# InfiniLM

./: .gitignore  CLAUDE.md  CMakeLists.txt  MINICPM_SALA_BUILD_AND_CHANGES.md  MiniCPM_SALA_alignment_progress.md  README.md  conftest.py  local_test_command.py  model_adapt.md  model_split_plan.md  pyproject.toml  run_infinilm_server.sh  run_infinilm_server_decode.sh  run_infinilm_server_prefill.sh  run_req.sh  setup.py  test_transfer.py  xmake.lua
benchmark/: run_client_hygon.sh  run_client_tp4_70b_hygon.sh  server_hygon.sh
ccl/: CMakeLists.txt
csrc/cache/: kv_cache.cpp  kv_cache.hpp
csrc/config/: config_factory.cpp
csrc/engine/: infer_engine.cpp  infer_engine.hpp  rank_worker.cpp  rank_worker.hpp
csrc/global_state/: forward_context.hpp
csrc/layers/attention/: attention.cpp  attention.hpp
csrc/layers/causal_lm_templates/: text_causal_lm.hpp  text_decoder_layer.hpp  text_model.hpp
csrc/layers/linear/: fused_linear.cpp  fused_linear.hpp
csrc/layers/mlp/: mlp.cpp  mlp.hpp  moe_mlp.cpp  moe_mlp.hpp
csrc/models/: infinilm_model.cpp  infinilm_model.hpp  model_factory.cpp  model_factory.hpp
csrc/models/baichuan/: baichuan_for_causal_lm.cpp
csrc/models/chatglm/: chatglm_for_causal_lm.cpp
csrc/models/fm9g/: fm9g_for_causal_lm.cpp
csrc/models/glm4/: glm4_for_causal_lm.cpp
csrc/models/internlm3/: internlm3_for_causal_lm.cpp  internlm3_for_causal_lm.hpp
csrc/models/llama/: llama_attention.cpp  llama_attention.hpp  llama_decoder_layer.cpp  llama_for_causal_lm.cpp  llama_for_causal_lm.hpp  llama_mlp.cpp  llama_model.cpp
csrc/models/llama_legacy/: llama_attention.cpp  llama_decoder_layer.cpp  llama_model.cpp
csrc/models/minicpm5_moe/: minicpm5_moe_attention.cpp  minicpm5_moe_attention.hpp  minicpm5_moe_decoder_layer.cpp  minicpm5_moe_decoder_layer.hpp  minicpm5_moe_dense_mlp.cpp  minicpm5_moe_dense_mlp.hpp  minicpm5_moe_for_causal_lm.cpp  minicpm5_moe_for_causal_lm.hpp  minicpm5_moe_sparse_moe_block.cpp  minicpm5_moe_sparse_moe_block.hpp  minicpm5_moe_vllm_fused_sparse_moe_block.cpp  minicpm5_moe_vllm_fused_sparse_moe_block.hpp
csrc/models/minicpm5_moe_fused_stub/: minicpm5_moe_fused_stub_decoder_layer.cpp  minicpm5_moe_fused_stub_decoder_layer.hpp  minicpm5_moe_fused_stub_for_causal_lm.cpp  minicpm5_moe_fused_stub_for_causal_lm.hpp  minicpm5_moe_vllm_fused_sparse_moe_block.cpp  minicpm5_moe_vllm_fused_sparse_moe_block.hpp
csrc/models/minicpm_sala/: minicpm_sala_attention.cpp  minicpm_sala_attention.hpp  minicpm_sala_decoderLayer.cpp  minicpm_sala_decoderLayer.hpp  minicpm_sala_decoder_layer.cpp  minicpm_sala_decoder_layer.hpp  minicpm_sala_for_causal_lm.cpp  minicpm_sala_for_causal_lm.hpp  minicpm_sala_model.cpp  minicpm_sala_model.hpp
csrc/models/mistral/: mistral_for_causal_lm.cpp
csrc/models/qwen2/: qwen2_for_causal_lm.cpp
csrc/models/qwen3/: qwen3_attention.cpp  qwen3_attention.hpp  qwen3_for_causal_lm.cpp
csrc/models/qwen3_moe/: qwen3_moe_for_causal_lm.cpp
csrc/models/qwen3_next/: qwen3_next_attention.cpp  qwen3_next_attention.hpp  qwen3_next_decoderLayer.cpp  qwen3_next_decoderLayer.hpp  qwen3_next_for_causal_lm.cpp  qwen3_next_for_causal_lm.hpp
csrc/models/qwen3_vl/: qwen3_vl_for_conditional_generation.cpp  (+1 more)
csrc/ops_shim/: ops_shim.cpp  ops_shim.hpp  ops_shim_cuda.cu  ops_shim_cuda.hpp
csrc/utils/: nvtx.hpp  vllm_fused_moe_dispatch.cpp  vllm_fused_moe_dispatch.hpp
docs/: PERF_AND_EXT_NOTES.md
examples/: FLASH_ATTN_AND_VLLM_FUSED_MOE.md  bench_balanced.py  collect_metrics_longtext_decode.py  compare_inference_speed.py  flash_attn_preload.py  gap_report_ttft_vs_vllm.md  hf_bench_match_jiuge.py  jiuge.py  jiuge_temp.py  layer_ab_diff_minicpm5_moe.py  llama.py  logit_sanity_minicpm5_moe.py  metrics_16k_prefill.md  minicpm5_moe_fused_stub_ckpt.py  minicpm5_moe_inference_profiling.md  moe_aten_spike.py  moe_smoke.py  optimization_backlog.md  parity_minicpm5_moe.py  profiling_progress.md  run_infinicore_ops_before_logits.sh  setup_vllm_venv.sh  test_infer.py  vllm_bench_match_jiuge.py  vllm_kernel_reuse_evaluation.md  vllm_minicpm5_moe_patch.md  vllm_moe_bridge_spike.py  vllm_probe_load.py
examples/vllm_patches/: sitecustomize.py
ops/: CMakeLists.txt
ops/include/infinicore/adaptor/: aten_adaptor.hpp
ops/include/infinicore/context/: context.hpp
ops/include/infinicore/graph/: graph.hpp
ops/src/infinicore/context/: context_impl.cc
ops/src/infinicore/context/allocators/: pinnable_block_allocator.cc
ops/src/infinicore/context/runtime/: runtime.cc  runtime.hpp
ops/src/infinicore/graph/: graph.cc  graph_manager.hpp
ops/src/infinicore/nn/: embedding.cc  rmsnorm.cc
ops/src/infinicore/ops/linear/: linear.cc
ops/src/infinicore/ops/mha_kvcache/: mha_kvcache.cc  mha_kvcache_flashattn.cc
ops/src/infinicore/ops/multi_head_attention_varlen/: mha_varlen.cc  mha_varlen_flashattn.cc
ops/src/infinicore/pybind11/: context.hpp
ops/src/infiniop/devices/nvidia/: nvidia_common.cu  nvidia_kernel_common.cuh
ops/src/infiniop/ops/dequant/per_tensor_dequant_int8/: operator.cc
ops/src/infiniop/ops/embedding/nvidia/: embedding_nvidia.cu
ops/src/infiniop/ops/gaussian_nll_loss/cuda/: kernel.cuh
ops/src/infiniop/ops/hinge_embedding_loss/cuda/: kernel.cuh
ops/src/infiniop/ops/paged_attention/: operator.cc
ops/src/infiniop/ops/paged_attention_prefill/: operator.cc
ops/src/infiniop/ops/paged_attention_prefill/cuda/: kernel_v2.cuh
ops/src/infiniop/ops/paged_attention_prefill/nvidia/: paged_attention_prefill_nvidia.cu
ops/src/infiniop/ops/paged_caching/: operator.cc
ops/src/infiniop/ops/quant/per_tensor_quant_int8/: operator.cc
ops/src/infiniop/ops/relu6/cuda/: kernel.cuh
python/infinicore/: __init__.py
python/infinilm/: __init__.py  auto_config.py  base_config.py  infer_engine.py  modeling_utils.py  test_transfer.py  test_transfer_temp.py
runtime/: CMakeLists.txt
scripts/: _DEPRECATED.md  test_yi_transformers.py
src/allocator/: memory_allocator.cpp
src/cache_manager/: kvcache.cpp
src/models/: model_base.hpp
test/: test_async_llm_engine_defaults.py  test_utils_openai_format.py  test_utils_tokenizer.py
(+49 files in other folders)
